--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -54,7 +54,7 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#a37871]</td>
+        <td class="primary">[#49322e]</td>
         <td class="secondary">[#427aa1]</td>
         <td class="accent1">[#78e0dc]</td>
         <td class="accent2">[#231c07]</td>
