W04 - Adding More HTML and CSS

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wavey Waters Rafting</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
     <header>
     <nav>
-        <a href="index.html" id="logo_link">
-            <img src="images/logo.jpg" alt="Wavey Waters Rafting Logo" class="logo" width ="50" height = "50">
+        <a href="index.html" id="logo_link" target = "_blank">
+            <img src="images/logo.jpg" alt="Wavey Waters Rafting Logo" class="logo" width ="80" height = "80">
         </a>
         <a href="index.html">Home</a>
         <a href="#">Page 2</a>
@@ -32,26 +34,41 @@
     <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/rivers_icon.jpg" alt="river icon" width ="50" height = "50">
+            <img class="icon" src="images/rivers_icon.jpg" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
             <img class="card-img" src="images/camping.webp" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.jpg" alt="fire icon" width ="50" height = "50">
+            <img class="icon" src="images/fire_icon.jpg" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
             <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon" width ="50" height = "50">
+            <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div> 
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
-        <p>If you want an awesome vacation, and also a place to run away to so the court donesn;t take the kids. This is your place.</p>
+        <p>If you want an awesome vacation, and also a place to run away to so the court doesn't take the kids. This is your place.</p>
         <a class='join' href="rivers.html">Join Us</a>
     </section>
     </main>
-    
+    <footer>
+        <p>Wavey Waters No Rights Reserved Jase Erickson</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contact_us.html">Contact Us</a></p>
+        <a href="https://facebook.com" target="_blank">
+            <img class="social" src="images/facebook.png" alt="Facebook Icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img class="social" src="images/instagram.png" alt="Instagram Icon">
+        </a>
+        <a href="https://x.com" target="_blank">
+            <img class="social" src="images/x.png" alt="X (Twitter) Icon">
+        </a>
+    </footer>
+    </div>
 </body>
 </html>
