--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#49322e]</td>
-        <td class="secondary">[#427aa1]</td>
-        <td class="accent1">[#78e0dc]</td>
-        <td class="accent2">[#231c07]</td>
+        <td class="primary">[#9D7462]</td>
+        <td class="secondary">[#9D9162]</td>
+        <td class="accent1">[#9D626E]</td>
+        <td class="accent2">[#9B7064]</td>
       </tr>
     </table>
 
