--- a/CashmereInvestments/W08 - Personal Site Content/site-plan.html
+++ b/CashmereInvestments/W08 - Personal Site Content/site-plan.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Cashmere Investments Site Plan</h1>
+      <h2>Jase Erickson</h2>
+      <h2>WDD 130</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -60,10 +60,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Roboto  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: DM Sans  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
