--- a/CashmereInvestments/W08 - Personal Site Content/site-plan.html
+++ b/CashmereInvestments/W08 - Personal Site Content/site-plan.html
@@ -123,29 +123,40 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Look no further for your pefect place to establish your buisness or branch.
+        We offer industrial spaces for competitive leasing rates and are available to help build and create any additional infastructure assosiated with your buisness.
+        We feature a convenient location directly off of the highway that makes transportation of goods simple and quick.
+        Electric rates come at a specially negociated discounted cost compared to others around.
+        Contact us now to inquire on our available spaces!
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images\shop.jpg" alt="image for homepage">
+        <img src="images\photo-four.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Cashmere Investments-Contact us</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Chad (Property Manager) - 555-555-5555
+        With his incredible level of expertise chad has singlehandledly renovated a former apple sauce manufacturing plant
+        into anything you could dream of. Hatcheries, Cannaries, Auto repair bays, he has prepared spaces for all of these things.
+        There is no project too big for Chad to handle. He will prepare the space for you to build exactly what you can dream of.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images\phone-call.png" alt="image for page">
+        <img src="images\pexels-felipe-silva-1458994757-30928414.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Site Information</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The site currently features multiple docking stations compatable with Semi-trucks.
+        There are 12000 gallons of liquid storage available in stainless steel tanks.
+        Check out the site from overhead right below.
+        Contact us to inquire about availablitly of assets!
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images\semi-dock.jpeg" alt="image for page3">
+        <img src="images\overhead.jpg" alt="image for page3">
 
       </ul>
       <hr>
