--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -122,7 +122,7 @@
 
     <h3>[Page 2]</h3>
 
-    <img src="wwr\images\raftingwireframe.png" alt="home page wireframe" />
+    <img src="images\raftingwireframe.png" alt="home page wireframe" />
 
   </main>
 </body>
