fixed image 2 on subpage

--- a/wwr/testimonials.html
+++ b/wwr/testimonials.html
@@ -29,7 +29,7 @@
                 <p>"I had a great time with my family. The guides were very helpful and the rapids were thrilling."</p>
             </section>
             <section class="testimonials">
-                <img id="testimonialpic" src="images/testimonial2.avif" alt="Person rafting">
+                <img id="testimonialpic" src="images/Testimonial2.png" alt="Person rafting">
                 <h2>Jane Doe</h2>
                 <p>"Our rafting trip with Wavey Waters was absolutely phenomenal! The entire experience was well-organized and the staff went above and beyond to ensure our safety and enjoyment. The rapids were thrilling and the natural beauty of the surroundings made it even more special. This is an adventure we will never forget, and we can't wait to come back for more!"</p>
             </section>
